--- a/picMap_fontend/index.html
+++ b/picMap_fontend/index.html
@@ -2,7 +2,7 @@
  * @Author: Do not edit
  * @Date: 2024-12-12 19:00:05
  * @LastEditors: lemonlqf lemonlqf@outlook.com
- * @LastEditTime: 2025-02-16 10:31:00
+ * @LastEditTime: 2025-04-29 23:13:22
  * @FilePath: \Code\picMap_fontend\index.html
  * @Description: 
 -->
@@ -18,7 +18,7 @@
 
 <body>
   <div id="app"></div>
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
